--- a/assets/simplon/index.html
+++ b/assets/simplon/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E>
-    <link rel=" preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+    <link rel=" preconnect" href="https://fonts.gstatic.com/crossorigin">
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,400;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -19,10 +19,11 @@
 <body>
 
     <div class="container">
+
         <div class="d1">
             <img src="https://simplonline.co/static/sol-logo.png" alt="logo-simplon">
-            <p class="p1"><b>La plateforme collaborative d'apprentissage <br>
-                    en pédagogie active </p>
+            <p class="p1">La plateforme collaborative d'apprentissage <br>
+                en pédagogie active </p>
             <a class="power" href="https://simplon.co/">Powered by Simplon</a>
 
         </div>
@@ -33,34 +34,30 @@
                 <p class="p2">Tous les champs sont obligatoires</p>
 
 
-                <form class="form1" action="">
+                <form class ="form1" >
                     <div class="email">
                         <label for="email">
-                            <p class="p30">Adresse email -
+                            <span class="p30">Adresse email -
                                 <span class="p3">
                                     Format: exemple@mail.com
                                 </span>
-                            </p>
+                            </span>
                         </label>
                         <div class="emaill">
                             <input name="email" id="email" type="email" aria-invalid="false" aria-describedby="email"
                                 class="sc-b776298a-0 cKDBjI" value="">
                         </div>
                     </div> <br>
-                    <label for="password" class="p30">Mot de passe</label>
+                    <label for="pass" class="p30">Mot de passe</label>
 
                     <div class="passs">
-                        <input id="pass" type="pass" name="password">
+                        <input id="pass" type="password" name="password">
                     </div><br>
                     <a class="mot" href="https://simplonline.co/reset-password">Mot de passe oublié ?</a> <br>
 
                     <div class="connect"><input id="submit" type="submit" value="Se connecter"></div>
 
                     <br>
-
-
-
-
                     <button class="btn-item" type="button">
 
                         <img class="img-langue" src="english.jpg" alt="flag">
@@ -68,7 +65,7 @@
                             <i class="fa-solid fa-chevron-down"></i>
                         </span>
                     </button>
-
+                </form>
             </div>
             <footer>
 
