--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div>
                         <img src="assets/images/map.png" alt=" image du TP"> <br>
                     </div>
-                    <a href="assets/Projet-crous/Crous.html" target="_blank">Crous-Restorations</a>
+                    <a href="assets/Projet-crous/Crous.html" target="_blank">Crous-Resto</a>
 
                 </div>
                 <div class="projet">
