--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
                     <ul>
                         <li class="list-icon"><i class="fab fa-html5"></i></li>
                     </ul>
-
                     <figcaption>
                         <h3>HTML5</h3>
-                        <p class="valide">VALIDE</p>
+                        <p class="valide"></p>
                     </figcaption>
                 </figure>
 
@@ -101,7 +100,7 @@
                     <figcaption>
                         <h3>CSS3</h3>
                         <P>FLEX/GRID</P>
-                        <p class="valide">VALIDE</p>
+                        <p class="valide"></p>
                     </figcaption>
                 </figure>
                 <figure>
@@ -111,9 +110,10 @@
 
                     <figcaption>
                         <h3>GIT & GITHUB</h3>
-                        <p class="encours">EN COURS</p>
+                        <p class="encours"></p>
                     </figcaption>
                 </figure>
+
                 <figure>
                     <ul>
                         <li class="list-icon">
@@ -121,21 +121,50 @@
                         </li>
                     </ul>
 
+
                     <figcaption>
                         <h3>BOOTSTRAP</h3>
-                        <p class="encours">EN COURS</p>
+                        <p class="encours"></p>
                     </figcaption>
                 </figure>
-                <figure>
 
+
+                <figure>
                     <ul>
                         <li class="list-icon"><i class="fab fa-js-square"></i></li>
                     </ul>
-
                     <figcaption>
                         <h3>JAVA SCRIPT</h3>
-                        <p class="avenir">A VENIR</p>
+                        <p class="avenir"></p>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <ul>
+                        <li class="list-icon"><i class="fab fa-php"></i></li>
+                    </ul>
+                    <figcaption>
+                        <h3>PHP</h3>
+                        <p class="avenir"></p>
+                    </figcaption>
+                </figure>
 
+                <figure>
+                    <ul>
+                        <li class="list-icon"><i class="fa-brands fa-laravel"></i></li>
+                    </ul>
+                    <figcaption>
+                        <h3>Laravel</h3>
+                        <p class="avenir"></p>
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <ul>
+                        <li class="list-icon"><i class="fa-brands fa-wordpress"></i></li>
+                    </ul>
+                    <figcaption>
+                        <h3>WordPress</h3>
+                        <p class="avenir"></p>
                     </figcaption>
                 </figure>
 
@@ -146,23 +175,21 @@
 
                     <figcaption>
                         <h3>REACT </h3>
-                        <p class="avenir">A VENIR</p>
+                        <p class="avenir"></p>
 
 
                     </figcaption>
                 </figure>
-
                 <figure>
                     <ul>
-                        <li class="list-icon"><i class="fab fa-php"></i></li>
+                        <li class="list-icon"><i class="fa-brands fa-figma"></i></li>
                     </ul>
-
-
                     <figcaption>
-                        <h3>PHP</h3>
-                        <p class="avenir">A VENIR</p>
+                        <h3>Figma </h3>
+                        <p class="avenir"></p>
                     </figcaption>
                 </figure>
+
             </div>
         </div>
 
