--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 Je suis en Formation développeur web et web mobile à SIMPLON.
                 Les compétences que ja vais acquerir en formation: <br> <br>
                 <span class="apropos">
-                    HTML CSS BOOTSTRAP GIT/GITHUB JAVASRIPT REACT PHP ...
+                    HTML CSS BOOTSTRAP GIT/GITHUB JAVASCRIPT REACT PHP ...
 
                 </span>
             </p>
