--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div id="up" class="header-right">
                 <h1 class="nom">Behzad JAMSHIDI</h1>
                 <h2>Behzad JAMSHIDI 23 ans, développeur junior à Simplon</h2>
-                <a class="cv" href="assets/pdf/My-cv.pdf" target="_blank">Télécharger mon CV</a>
+                <a class="cv" href="assets/pdf/CvBehzadNew.pdf" target="_blank">Télécharger mon CV</a>
 
             </div>
         </div>
